2007-02-28  Stan Cox  <scox@redhat.com>

	* hpd-c.c (func_1,func_2): Don't inline.

2007-02-12  Mark Wielaard  <mark@klomp.org>

	* funit-alarm.c: New test program.

2007-02-09  Mark Wielaard  <mark@klomp.org>

	* funit-breakpoints.c (signal_handler):
	Remove bogus signal reset kernel workaround.

2007-02-07  Andrew Cagney  <cagney@redhat.com>

	* hpd-c.c: New file.

2007-02-07  Mark Wielaard  <mark@klomp.org>

	* funit-breakpoints.c (send_hup, receive_hup): New static ints.
	(trap_handler): Renamed to ...
	(signal_handler): Now also handles SIGHUP.
	(dummy): Send SIGHUP. Add SIGTRAP signal install workaround.
	(main): Check both hup and trap counts.

2007-02-06  Nurdin Premji  <npremji@redhat.com>

	* funit-stackframe.S: (main): Updated to reflect changes to ENTER_MAIN.

	* funit-stackframe.S (main): Deleted push command, not needed.
	Changed COMPAREs to COMPARE_IMMEDs.
	REMOVED ENTER, ENTER_MAIN now does that as well.

2007-02-06  Andrew Cagney  <cagney@redhat.com>

	* funit-asm.h: Delete, moved to frysk-imports/include/frysk-asm.h.
	* funit-rt-asmstepper.S: Include "frysk-asm.h".
	* funit-stackframe.S: Include "frysk-asm.h".

2007-02-06  Mark Wielaard  <mark@klomp.org>

	* funit-stackframe.S (main): Use push, not pushl.

2007-02-05  Nurdin Premji  <npremji@redhat.com>

	* funit-asm.h: Added tags for ENTER_MAIN and COMPARE on 386.
	* funit-stackframe.S: Added. Contains :
	* funit-stackframe-asm.S: Removed.
	* funit-stackframe-static-asm.S: Ditto.
	* funit-stackframe.c: Removed before.
	* funit-stackframe-static.c: Ditto.

2007-02-05  Andrew Cagney  <cagney@redhat.com>

	* funit.java: Create 32-on-64 and default install configs.  Pass
	same to runTestCases.

	* funit.java: Pass Config.getBinDir to testRunner.

2007-02-05  Mark Wielaard  <mark@klomp.org>

	* funit-asm.h (STORE __x86_64__): Use mov, not movl.

2007-02-02  Mike Cvet  <mcvet@redhat.com>

	* funit-asm.h (LOAD_IMMED): Fixed x86_64 build failure due to
	'CONSTANT' being undefined.
	